@@ -22,5 +22,6 @@ requires:
   Data::Dumper: 0
   Pod::Coverage: 0
   RDF::Simple::Serialiser: 0
+  Regexp::Common: 0
   perl: 5
-version: 1.012
+version: 1.013
