@@ -1,5 +1,5 @@
 
-# $Id: foaf-nt.t,v 1.1 2008/07/17 02:50:06 Martin Exp $
+# $Id: foaf-nt.t,v 1.2 2008/07/27 00:57:06 Martin Exp $
 
 use blib;
 use Test::More 'no_plan';
@@ -24,6 +24,7 @@ my @triples = (
                [$node1, 'foaf:name', 'Jo Walsh'],
                [$node1, 'foaf:knows', $node2],
                [$node2, 'foaf:name', 'Robin Berjon'],
+               [$node2, 'foaf:age', 26],
                [$node1, 'rdf:type', 'foaf:Person'],
                [$node2, 'rdf:type', 'http://xmlns.com/foaf/0.1/Person']
               );
@@ -43,6 +44,7 @@ is($ser->get_triple_count, scalar(@asTriples));
 __DATA__
 _:a456 <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://xmlns.com/foaf/0.1/Person> .
 _:a456 <http://xmlns.com/foaf/0.1/name> "Robin Berjon" .
+_:a456 <http://xmlns.com/foaf/0.1/age> 26 .
 
 _:a123 <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://xmlns.com/foaf/0.1/Person> .
 _:a123 <http://xmlns.com/foaf/0.1/name> "Jo Walsh" .
