@@ -1,3 +1,9 @@
+2008-07-26  Kingpin  <Martin@BLUEMAX>
+
+	* lib/RDF/Simple/Serialiser/NT.pm (render_rdfxml): use Regexp::Common to detect numeric values
+
+	* lib/RDF/Simple/Serialiser/N3.pm (render_rdfxml): use Regexp::Common to detect numeric values
+
 2008-07-16  Kingpin  <Martin@BLUEMAX>
 
 	* t/foaf-nt.t: new test
